1.2.4p2:
    Checks & Agents:
    * 0746 zfsget: fixed problem with agent output of check_mk_agent.solaris...

    WATO:
    * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...


1.2.4p1:
    Core & Setup:
    * 0282 FIX: TIMEPERIOD TRANSITION messages no longer cut at 64 bytes...
    * 0730 FIX: cmc: fixed bug displaying logentries after a logfile rotation...

    Checks & Agents:
    * 0279 FIX: check_mk_agent.solaris: removed proc section from statgrab...
    * 0281 FIX: statgrab_net.ctr: only inventorize interfaces with actual traffic...
    * 0667 FIX: oracle_asm_diskgroup: Now really uses the generic filesystem levels...
    * 0555 FIX: snmp_uptime: no longer fails if uptime is < 1 seconds
    * 0136 FIX: cisco_fru_power: Prevent inventory of not exsisting devices
    * 0673 FIX: zfsget: Fixed broken check - was not compatible to current agent output of "df"
    * 0719 FIX: postfix_mailq: fix Linux agent in case of ssmtp being installed
    * 0137 FIX: Fixed printer_pages...
    * 0563 FIX: windows agent: now able to process perl scripts...
    * 0142 FIX: winperf_if: treat unknown packets no longer as error packets
    * 0737 FIX: megaraid_ldisks: now able to handle "No Virtual Drive Configured" states...
    * 0763 FIX: hpux_if: Fixed exception during parsing of provided data on some systems...
    * 0148 FIX: cisco_mem: Repaired error handling when updating from older versions...

    Multisite:
    * 0278 FIX: Fixed bookmark icon images for non-english user languages...
    * 0670 FIX: LDAP: Fixed sync when non lower case attributes are configured...
    * 0671 FIX: LDAP: Disable logging of password changes received from LDAP
    * 0558 FIX: availability: fixed exception on specific filter settings...
    * 0712 FIX: Fix multiple groups with same tag when grouping hosts after a tag...
    * 0762 FIX: Fixed availability filters not opening in IE7